--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -83,40 +83,25 @@
             </div>
         </nav>
 
-        <div class="alert-container">
-            <div ng-if="userInfo.profile.is_policy_accepted === false" class="alert alert-warning alert-dismissible" role="alert" ng-cloak>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <strong>Warning!</strong>
-                You haven't accepted the
-                <a href="https://wolverineaccess.umich.edu/eac/accesscomplianceresponse.jsp">University's Access &amp; Compliance policy</a>
-                yet.
-            </div>
-            <div ng-if="dataDown" class="alert alert-danger alert-dismissible" role="alert" ng-cloak>
-                The database appears to be down. This may be for normal maintanence, please try reloading in a few minutes.
-            </div>
+        <div class='container-index'>
+          {% block content %}{% endblock %}
+          <div class='feedback center-align visible-md visible-lg'>
+            <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
+            <a href="mailto:student-explorer-help@umich.edu" target="_top">submitting your feedback</a>
+          </div>
 
-        </div>
+          <div class='feedback center-align visible-sm visible-xs'>
+            <button type="button" class="btn btn-sm btn-secondary"><a href="mailto:student-explorer-help@umich.edu" target="_top"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
+          </div>
 
-        {% block content %}{% endblock %}
-
-        <div class='feedback center-align visible-md visible-lg'>
-          <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
-          <a href="mailto:student-explorer-help@umich.edu" target="_top">submitting your feedback</a>
-        </div>
-
-        <div class='feedback center-align visible-sm visible-xs'>
-          <button type="button" class="btn btn-sm btn-secondary"><a href="mailto:student-explorer-help@umich.edu" target="_top"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
-        </div>
-
-        <div class="footer navbar-fixed-bottom">
-            <div class="container">
-                <p class="main-color-white">Student Explorer (<a href="/about" style="text-decoration: none; color: inherit;">2.1.0</a>)
-                    <span class="footer-block">Copyright &copy; 2015 - 2016</span>
-                    <span class="footer-block">The Regents of the University of Michigan</span>
-                </p>
-            </div>
+          <div class='footer'>
+              <div class="container">
+                  <p class="main-color-white">Student Explorer (<a href="/about" style="text-decoration: none; color: inherit;">2.1.0</a>)
+                      <span class="footer-block">Copyright &copy; 2015 - 2016</span>
+                      <span class="footer-block">The Regents of the University of Michigan</span>
+                  </p>
+              </div>
+          </div>
         </div>
 
         <script>
