Remove old icon files

--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/static/images/favicon.ico">
-        <link rel="apple-touch-icon" sizes="152x152" href="{% static 'images/icon-52.png' %}">
+        <link rel="apple-touch-icon" href="{% static 'images/favicon.ico' %}">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/dist/css/bootstrap.css' %}">
