--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -35,8 +35,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                      <img id="student-explorer-logo" src="/static/images/se-logo.svg" alt="student explorer logo">
-                      <a class="main-color-white main-navbar-brand navbar-brand">Student Explorer</a>
+                    <img id="student-explorer-logo" src="/static/images/se-logo.svg" alt="student explorer logo">
+                    <a class="main-color-white main-navbar-brand navbar-brand">Student Explorer</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -99,12 +99,16 @@
         {% block content %}{% endblock %}
 
         <div class='feedback center-align visible-md visible-lg'>
-          <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
-          <a href="mailto:student-explorer-help@umich.edu" target="_top">submitting your feedback</a>
+            <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
+            <a href="mailto:student-explorer-help@umich.edu" target="_top">submitting your feedback</a>
         </div>
 
         <div class='feedback center-align visible-sm visible-xs'>
-          <button type="button" class="btn btn-sm btn-secondary"><a href="mailto:student-explorer-help@umich.edu" target="_top"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
+            <button type="button" class="btn btn-sm btn-secondary">
+                <a href="mailto:student-explorer-help@umich.edu" target="_top">
+                    <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>
+                    Submit Feedback</a>
+            </button>
         </div>
 
         <div class="footer navbar-fixed-bottom">
