--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -103,11 +103,11 @@
 
         <div class='feedback center-align visible-md visible-lg'>
           <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
-          <a href="mailto:student-explorer-help@umich.edu" target="_top">submitting your feedback</a>
+          <a href="/feedback/">submitting your feedback</a>
         </div>
 
         <div class='feedback center-align visible-sm visible-xs'>
-          <button type="button" class="btn btn-sm btn-secondary"><a href="mailto:student-explorer-help@umich.edu" target="_top"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
+          <button type="button" class="btn btn-sm btn-secondary"><a href="/feedback/"><img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img> Submit Feedback</a></button>
         </div>
 
         <div class="footer navbar-fixed-bottom">
