--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -7,23 +7,10 @@
         <div class='container'>
             <div class='row-fluid'>
                <div class="page-header">
-                  <h1 class="sub-header">Submit Feedback</h1>
+                  <h1 class="sub-header">Feedback</h1>
                </div>
-                <div class='form-group {% if form.errors.user_name %} has-error {% endif %}'>
-                    {% for error in form.errors.user_name %}
-                        <label class='control-label' for='{{ form.user_name.id_for_label }}'>
-                            {{ error }}
-                        </label>
-                    {% endfor %}
-                    <input type='text' class='form-control' name='{{ form.user_name.name }}' id='{{ form.user_name.id_for_label }}' value='{{ user.get_full_name }}' placeholder='Full Name' readonly/>
-                </div>
-                <div class='form-group {% if form.errors.user_email %} has-error {% endif %}'>
-                    {% for error in form.errors.user_email %}
-                        <label class='control-label' for='{{ form.user_email.id_for_label }}'>
-                            {{ error }}
-                        </label>
-                    {% endfor %}
-                    <input type='email' class='form-control' name='{{ form.user_email.name }}' id='{{ form.user_email.id_for_label }}' {% if user.email %} value='{{ user.email }}' {% else %} value='{{ user.username }}@umich.edu' {% endif %} placeholder='Email Address' readonly/>
+                <div class='form-group'>
+                    <input type='text' class='form-control' name='{{ form.user_name.name }}' id='{{ form.user_name.id_for_label }}' value='{{ user.get_full_name }} <{{ user.email }}>' placeholder='' readonly/>
                 </div>
                 <label for='{{ form.feedback_message.id_for_label }}'>Message:</label>
                 <div class='form-group {% if form.errors.feedback_message %} has-error {% endif %}'>
