Refine feedback interface
- Add confirmation message on same page
- Decrease width of form
- Add a cancel button
- Add an instruction message

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -340,6 +340,9 @@ th[scope="row"] {
   .container {
     max-width: 100% !important;
   }
+  .container-feedback {
+    width: 50%;
+  }
 
   /* Remove the padding we set earlier */
   .header,
