--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -4,11 +4,17 @@
 
     <form method="post">{% csrf_token %}
 
-        <div class='container'>
+        <div class='container container-feedback center-block'>
             <div class='row-fluid'>
-               <div class="page-header">
-                  <h1 class="sub-header">Feedback</h1>
-               </div>
+                <div class="page-header">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class='alert alert-{{ message.tags }}'>{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
+                    <h1 class="sub-header">Feedback</h1>
+                    <small>Please tell us about your experience using Student Explorer. Your feedback will help us improve the tool.</small>
+                </div>
                 <div class='form-group'>
                     <input type='text' class='form-control' name='{{ form.user_name.name }}' id='{{ form.user_name.id_for_label }}' value='{{ user.get_full_name }} <{{ user.email }}>' placeholder='' readonly/>
                 </div>
@@ -22,6 +28,7 @@
                     <textarea class="form-control" rows="5" name='{{ form.feedback_message.name }}' id='{{ form.feedback_message.id_for_label }}'></textarea>
                 </div>
                 <button type='submit' class='btn btn-success'>Submit</button>
+                <a href="{{ request.META.HTTP_REFERER }}"><button type='button' class='btn btn-danger'>Cancel</button></a>
             </div>
         </div>
 
