Fix feedback link display
Fix the display by modifying index.html -> this change is being reinserted after it had to be removed due to merge conflicts.

--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -14,7 +14,7 @@
                 {% include 'seumich/student_info_partial.html' with link_present=False %}
             </div>
         </div>
-        <div class="student-detail-main">
+        <div class="student-detail-main main-page-end-margin-bottom">
             <h2>Courses Summary</h2>
             <hr class="main-no-margin-top"/>
             <div class="student-detail-summary-content">
