--- a/seumich/templates/seumich/student_list_partial.html
+++ b/seumich/templates/seumich/student_list_partial.html
@@ -7,7 +7,7 @@
     <h2 class="list-header">Students</h2>
 {% endif %}
 
-<div class="table-responsive">
+<div class="table-responsive main-page-end-margin-bottom">
     <table class="table table-striped">
         <thead>
             <tr>
