Refine feedback further
- Add From label to read only field
- Change the styling of feedback button in mobile layout - ensure proper spacing as well
- Add gray cancel button - clicking this will let user go to previous page
- Form is not redirecting now - but staying on the same page with form cleared

--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -2,20 +2,18 @@
 
 {% block content %}
 
-    <form method="post">{% csrf_token %}
-
-        <div class='container container-feedback center-block'>
-            <div class='row-fluid'>
-                <div class="page-header">
-                    {% if messages %}
-                        {% for message in messages %}
-                            <div class='alert alert-{{ message.tags }}'>{{ message }}</div>
-                        {% endfor %}
-                    {% endif %}
-                    <h1 class="sub-header">Feedback</h1>
-                    <small>Please tell us about your experience using Student Explorer. Your feedback will help us improve the tool.</small>
-                </div>
+    <div class='container container-feedback center-block end-margin'>
+        <div class='row-fluid'>
+            <form method="post">{% csrf_token %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class='alert alert-{{ message.tags }} top-buffer'>{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+                <h1 class="sub-header">Feedback</h1>
+                <small>Please tell us about your experience using Student Explorer. Your feedback will help us improve the tool.</small>
                 <div class='form-group'>
+                    <label for='{{ form.user_name.id_for_label }}'>From:</label>
                     <input type='text' class='form-control' name='{{ form.user_name.name }}' id='{{ form.user_name.id_for_label }}' value='{{ user.get_full_name }} <{{ user.email }}>' placeholder='' readonly/>
                 </div>
                 <label for='{{ form.feedback_message.id_for_label }}'>Message:</label>
@@ -28,10 +26,11 @@
                     <textarea class="form-control" rows="5" name='{{ form.feedback_message.name }}' id='{{ form.feedback_message.id_for_label }}'></textarea>
                 </div>
                 <button type='submit' class='btn btn-success'>Submit</button>
-                <a href="{{ request.META.HTTP_REFERER }}"><button type='button' class='btn btn-danger'>Cancel</button></a>
-            </div>
+                <a href='{{ request.META.HTTP_REFERER }}' class='cancel-link'>
+                    <button type='button' class='btn btn-secondary'>Cancel</button>
+                </a>
+            </form>
         </div>
-
-    </form>
+    </div>
 
 {% endblock %}
