--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -1,7 +1,7 @@
 {% extends 'seumich/advisor.html' %}
 
 {% block content %}
-    <div class="container">
+    <div class="container end-margin">
         {% if advisor %}
             {% include 'seumich/student_list_partial.html' %}
         {% else %}
