--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -8,13 +8,13 @@
 
 {% block content %}
 
-    <div class="container-fluid">
+    <div class="container-fluid end-margin">
         <div class="student-detail-main-menu">
             <div class="student-detail-main-menu-top">
                 {% include 'seumich/student_info_partial.html' with link_present=False %}
             </div>
         </div>
-        <div class="student-detail-main main-page-end-margin-bottom">
+        <div class="student-detail-main">
             <h2>Courses Summary</h2>
             <hr class="main-no-margin-top"/>
             <div class="student-detail-summary-content">
