--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="container end-margin">
         <h2 class="sub-header list-header">All Advisors</h2>
-        <div class="table-responsive end-padding">
+        <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
                     <tr>
