--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 
-    <div class="container-fluid">
+    <div class="container-fluid end-margin">
         <div class="student-detail-left-menu" id="student-detail-menu">
             <div class="student-detail-left-menu-top">
                 {% include 'seumich/student_info_partial.html' with link_present=True %}
