--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -73,10 +73,10 @@
                         {% endif %}
                     </ul>
                     <form action="/students/" method="get" class="navbar-form navbar-right">
-                      <div class="form-group">
-                        <label for="student-search" class="sr-only">Search student name, uniqname, or UMID...</label>
-                        <input id="student-search" value="{{ query_user | default_if_none:'' }}" name="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
-                      </div>
+                        <div class="form-group">
+                            <label for="student-search" class="sr-only">Search student name, uniqname, or UMID...</label>
+                            <input id="student-search" value="{{ query_user | default_if_none:'' }}" name="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
+                        </div>
                     </form>
                 </div>
             </div>
@@ -89,11 +89,11 @@
                 <a href="/feedback/">submitting your feedback</a>
             </div>
             <div class='feedback center-align visible-sm visible-xs'>
-                <button type="button" class="btn btn-sm btn-secondary">
-                    <a href="/feedback/">
+                <a href="/feedback/">
+                    <button type="button" class="btn btn-sm btn-default">
                         <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>
-                        Submit Feedback</a>
-                </button>
+                        Submit Feedback</button>
+                </a>
             </div>
             <div class="footer">
                 <div class="container">
