--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <div class="container-fluid end-margin">
+    <div class="container-fluid content">
         <div class="student-detail-main-menu">
             <div class="student-detail-main-menu-top">
                 {% include 'seumich/student_info_partial.html' with link_present=False %}
