--- a/seumich/templates/seumich/advisor_list.html
+++ b/seumich/templates/seumich/advisor_list.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div class="container end-margin">
+    <div class="container content">
         <h2 class="sub-header list-header">All Advisors</h2>
         <div class="table-responsive">
             <table class="table table-striped">
