--- a/student_explorer/templates/student_explorer/index.html
+++ b/student_explorer/templates/student_explorer/index.html
@@ -83,20 +83,32 @@
         </nav>
 
         <div class="container-index">
+            {% if messages %}
+                <div class="container alert-message">
+                    {% for message in messages %}
+                        <div class='alert alert-{{ message.tags }} alert-dismissible' role='alert'>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
             {% block content %}{% endblock %}
-            <div class='feedback center-align visible-md visible-lg'>
-                <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
-                <a href="/feedback/">submitting your feedback</a>
-            </div>
-            <div class='feedback center-align visible-sm visible-xs'>
-                <a href="/feedback/">
-                    <button type="button" class="btn btn-sm btn-default">
-                        <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>
-                        Submit Feedback</button>
-                </a>
-            </div>
             <div class="footer">
-                <div class="container">
+                <div class='feedback center-align visible-md visible-lg'>
+                    <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>Help us improve Student Explorer by
+                    <a href="/feedback/">submitting your feedback</a>
+                </div>
+                <div class='feedback center-align visible-sm visible-xs'>
+                    <a href="/feedback/">
+                        <button type="button" class="btn btn-sm btn-default">
+                            <img src="{% static 'images/feedback.svg' %}" alt="Feedback icon"></img>
+                            Submit Feedback</button>
+                    </a>
+                </div>
+                <div class="container-fluid">
                     <p class="main-color-white">Student Explorer (<a href="/about" style="text-decoration: none; color: inherit;">2.1.0</a>)
                         <span class="footer-block">Copyright &copy; 2015 - 2016</span>
                         <span class="footer-block">The Regents of the University of Michigan</span>
